--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
+    "gsap": "^3.12.5",
+    "ngx-parallax": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
+    "scrollreveal": "^4.0.9",
+    "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -36,6 +40,7 @@
     "@types/aos": "^3.0.7",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
+    "@types/scrollreveal": "^0.0.11",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
